Fix checkbox alignment

--- a/styles/sections/_application_edit.scss
+++ b/styles/sections/_application_edit.scss
@@ -22,6 +22,13 @@
   }
 }
 
+
+#modal--add-app-mem {
+  input[type="checkbox"] + label::before {
+    margin-left: 0;
+  }
+}
+
 .app-team-settings-link {
   font-size: $small-font-size;
   font-weight: $font-normal;
@@ -99,6 +106,12 @@
   margin-bottom: 8 * $gap;
 
   text-align: left;
+
+  input[type="checkbox"] {
+    + label::before {
+      margin-left: -3rem;
+    }
+  }
 
   .usa-input {
     margin: 2rem 0 2rem 0;
